--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@gorhom/bottom-sheet": "^4",
+    "@gorhom/bottom-sheet": "4",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "^17.0.2",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-reanimated": "^2.3.0-beta.3",
+    "react-native-reanimated": "^2.2.4",
     "react-native-web": "^0.17.5"
   },
   "devDependencies": {
